# barcode_indexing_tool

./: LICENSE  pyproject.toml  requirements.txt
src/barcode_indexing_tool/: index_images.py
src/barcode_indexing_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
